# Diterministic-Meeting-Intelegence-DMI-

./: .dvcignore  .gitignore  LICENSE  Makefile  README.md  RELEASE_NOTES.md  dvc.yaml  pyproject.toml
.dvc/: config
configs/: pipeline.nemo.asr_large_bs32_only.yaml  pipeline.nemo.asr_medium_only.yaml  pipeline.nemo.llama.asr_conformer_large_bs32.yaml  pipeline.nemo.llama.asr_medium.yaml  pipeline.nemo.llama.final_eval.yaml  pipeline.nemo.llama.strict_offline.yaml  pipeline.nemo.llama.yaml  pipeline.nemo.yaml  pipeline.sample.yaml
docs/: ACCEPTANCE_CHECKLIST_SECTION16.md  ARTIFACT_CONTRACT.md  CRISP_DM_ALIGNMENT.md  DEVELOPER_GUIDE.md  GOVERNANCE_OFFLINE.md  HANDOFF_NEXT_SESSION.md  NORMALIZATION_DECISION.md  OFFLINE_SETUP.md  PIPELINE_OVERVIEW.md  PLAN_ALIGNMENT.md  PRESENTATION.html  REPRODUCIBILITY_OBSERVABILITY.md  RETRIEVAL_LAYER_STATUS.md  TECHNICAL_REPORT.md
environment_lockfiles/: README.md
models/: README.md
scripts/: check_nemo_models.py  dvc_offline_init.sh  env_offline.sh  eval_asr_confidence.py  eval_diarization_speaker_count.py  eval_speech_metrics.py  generate_acceptance_evidence_bundle.py  generate_dvc_stage_template.py  nemo_asr.py  (+7 more)
ui/backend/: pyproject.toml
ui/backend/app/: __init__.py  config.py  dependencies.py  main.py
ui/backend/app/api/: __init__.py  configs.py  evaluation.py  governance.py  meetings.py  runs.py
ui/backend/app/schemas/: api_models.py
ui/backend/app/services/: artifact_reader.py  digest.py  fs_indexer.py  pipeline_runner.py  security.py
ui/backend/tests/: conftest.py  test_api.py  test_security_and_services.py
(+65 files in other folders)
