[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ami-mom-pipeline"
version = "0.1.0"
description = "Offline-first AMI meeting understanding pipeline scaffold (NeMo-centric)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.6",
  "PyYAML>=6.0",
]

[project.scripts]
ami-mom = "ami_mom_pipeline.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

